Make distinction between fatal and non-fatal protocol errors. Fixup naming and intiailization.